Edits to environment variables

--- a/chatbot/grannymail/sandbox.ipynb
+++ b/chatbot/grannymail/sandbox.ipynb
@@ -2,31 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from whatsapp.fastapi import process_webhook_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function whatsapp.fastapi.process_webhook_data(data: whatsapp.constants.WebhookRequestData) -> whatsapp.utils.WamBase | None>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "whatsapp.fastapi.process_webhook_data"
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(\".env\")\n",
+    "from whatsapp.utils import _post_httpx_request\n"
    ]
   },
   {
@@ -35,45 +17,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EAAt5yumjItYBO3YuxSRvEg204scn34QA2binyDwibREgRP6ZASxZCwE1argSOsc4ZA2VyT69a7rA8Cz7zMSqQEqf0nZCZAKxXzDGlkfCV1jFYIfFwM4Y9CVCFPqL9WIkSblJYZBzVdnyNIZAsbjOdlP8C4yzb2bqZACMafpODT22s9vWqfjPeP8v3yhpyxcZC4KS2\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['__annotations__',\n",
-       " '__builtins__',\n",
-       " '__call__',\n",
-       " '__class__',\n",
-       " '__closure__',\n",
-       " '__code__',\n",
-       " '__defaults__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__get__',\n",
-       " '__getattribute__',\n",
-       " '__getstate__',\n",
-       " '__globals__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__kwdefaults__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__name__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__qualname__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__']"
+       "{'messaging_product': 'whatsapp',\n",
+       " 'contacts': [{'input': '4915159926162', 'wa_id': '4915159926162'}],\n",
+       " 'messages': [{'id': 'wamid.HBgNNDkxNTE1OTkyNjE2MhUCABEYEjI4NUNGNjVCQzk5Rjc1RjJGMwA='}]}"
       ]
      },
      "execution_count": 6,
@@ -82,7 +37,15 @@
     }
    ],
    "source": [
-    "dir(whatsapp.utils.send_message)"
+    "data = {\n",
+    "    \"messaging_product\": \"whatsapp\",\n",
+    "    \"recipient_type\": \"individual\",\n",
+    "    \"to\": \"4915159926162\",\n",
+    "    \"type\": \"text\",\n",
+    "    \"text\": {\"preview_url\": False, \"body\": \"hi\"},\n",
+    "}\n",
+    "url =f\"https://graph.facebook.com/v18.0/{196914110180497}/messages\"\n",
+    "await _post_httpx_request(url, data=data)\n"
    ]
   },
   {
